# folium

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  release.sh
Casks/: folium.rb
assets/: AppIcon.icns  generate_icon.py
src/: app.rs  main.rs  pdf.rs  pdf_view.rs  pdfium.rs  tab.rs  toolbar.rs  ui.rs  window.rs
