[package]
name = "folium"
version = "0.1.0"
edition = "2024"

[dependencies]
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = [
    "NSString",
    "NSArray",
    "NSObject",
    "NSURL",
    "NSNotification",
] }
objc2-app-kit = { version = "0.3.2", features = [
    "NSApplication",
    "NSWindow",
    "NSScreen",
    "NSView",
    "NSResponder",
    "NSVisualEffectView",
    "NSLayoutConstraint",
    "NSControl",
    "NSButton",
    "NSButtonCell",
    "NSCell",
    "NSTextField",
    "NSColor",
    "NSFont",
    "NSImage",
    "NSText",
    "NSRunningApplication",
    "NSGraphics",
    "NSUserInterfaceLayout",
    "NSToolbar",
    "NSToolbarItem",
    "NSScrollView",
    "NSClipView",
    "NSImageView",
    "NSImageRep",
    "NSBitmapImageRep",
    "NSOpenPanel",
    "NSSavePanel",
    "NSPanel",
    "NSStackView",
    "NSWindowTabGroup",
    "NSGestureRecognizer",
    "NSMagnificationGestureRecognizer",
] }
pdfium-render = { version = "0.8", features = ["image"] }
dispatch = "0.2"
