[package]
name = "folium"
version = "0.1.0"
edition = "2024"

[dependencies]
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = [
    "NSString",
    "NSArray",
    "NSObject",
    "NSURL",
    "NSNotification",
] }
objc2-app-kit = { version = "0.3.2", features = [
    "NSApplication",
    "NSWindow",
    "NSScreen",
    "NSView",
    "NSResponder",
    "NSVisualEffectView",
    "NSLayoutConstraint",
    "NSControl",
    "NSButton",
    "NSButtonCell",
    "NSCell",
    "NSTextField",
    "NSColor",
    "NSFont",
    "NSText",
    "NSRunningApplication",
    "NSGraphics",
    "NSUserInterfaceLayout",
    "NSToolbar",
    "NSToolbarItem",
    "NSImage",
    "NSImageView",
    "NSOpenPanel",
    "NSSavePanel",
    "NSPanel",
    "NSStackView",
    "NSWindowTab",
    "NSWindowTabGroup",
    "NSMenu",
    "NSMenuItem",
    "NSEvent",
    "NSAlert",
    "NSScrollView",
    "NSTextView",
    "NSTrackingArea",
] }
objc2-pdf-kit = { version = "0.3.2", features = [
    "PDFView",
    "PDFDocument",
    "PDFPage",
    "PDFAnnotation",
    "PDFAnnotationMarkup",
    "PDFAnnotationUtilities",
    "PDFSelection",
    "PDFDestination",
] }
